--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,16 @@
 /* font-family: 'Montserrat', sans-serif;
 font-family: 'Poppins', sans-serif; */
 
+* {
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  font-family: "Poppins", sans-serif;
 }
 
 #nowPlayingBarContainer {
@@ -14,7 +18,7 @@ body {
   bottom: 0;
   width: 100%;
   min-width: 40rem;
-  background-color: #1e1e1e;
+  background-color: #181818;
   z-index: 1000;
   border-top: 1px solid #191919;
 }
@@ -23,17 +27,24 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 5rem;
-  max-width: 1200px;
+  height: 5.3rem;
   margin: 0 auto;
   padding: 1rem;
   box-sizing: border-box;
 }
 
-#nowPlayingLeft,
-#nowPlayingRight {
+#nowPlayingLeft {
   width: 30%;
   min-width: 11rem;
+  position: relative;
+  margin-top: 1rem;
+}
+
+#nowPlayingRight {
+  margin-left: auto;
+  min-width: 11rem;
+  position: relative;
+  margin-top: 1rem;
 }
 
 #nowPlayingCenter {
@@ -46,6 +57,7 @@ body {
 
 #nowPlayingCenter .content {
   width: 100%;
+  height: 3.5rem;
 }
 
 .playerControls .buttons {
@@ -62,12 +74,12 @@ body {
 }
 
 .btn .play {
-  font-size: 2.2rem;
+  font-size: 2.5rem;
   color: #fff;
 }
 
 .btn .pause {
-  font-size: 2.35rem;
+  font-size: 2.65rem;
   color: #fff;
 }
 
@@ -115,4 +127,38 @@ ion-icon:active {
 
 .playBackBar .progressBar {
   margin-top: 0.25rem;
+}
+
+#nowPlayingLeft .albumArtwork {
+  height: 100%;
+  max-width: 3.7rem;
+  margin-right: 1rem;
+  float: left;
+  border-radius: 5px;
+  background-size: cover;
+}
+
+#nowPlayingLeft .trackInfo {
+  display: table;
+}
+
+#nowPlayingLeft .trackInfo .trackName {
+  margin: 0.37rem 0;
+  display: inline-block;
+  width: 100%;
+}
+
+#nowPlayingLeft .trackInfo .artistName span {
+  font-size: 0.75rem;
+  color: #b3b3b3;
+}
+
+.volumeBar {
+  display: flex;
+  align-items: center;
+  width: 11.25rem;
+}
+
+.volumeBar .progressBar {
+  width: 7.8rem;
 }
