--- a/css/index.css
+++ b/css/index.css
@@ -99,7 +99,7 @@ ion-icon:active {
 
 .progressTime {
   color: #fff;
-  font-size: 0.75rem;
+  font-size: 0.7rem;
   min-width: 2.4rem;
   text-align: center;
 }
@@ -126,7 +126,7 @@ ion-icon:active {
 }
 
 .playBackBar .progressBar {
-  margin-top: 0.25rem;
+  margin-top: 0.3rem;
 }
 
 #nowPlayingLeft .albumArtwork {
@@ -143,7 +143,7 @@ ion-icon:active {
 }
 
 #nowPlayingLeft .trackInfo .trackName {
-  margin: 0.37rem 0;
+  margin-top: 0.3rem;
   display: inline-block;
   width: 100%;
 }
@@ -161,4 +161,5 @@ ion-icon:active {
 
 .volumeBar .progressBar {
   width: 7.8rem;
+  margin-bottom: 0.3rem;
 }
