--- a/css/artist.css
+++ b/css/artist.css
@@ -43,3 +43,36 @@ font-family: 'Poppins', sans-serif; */
 [role="link"] {
   cursor: pointer;
 }
+
+/* SearchBar */
+
+.searchContainer {
+  background-color: #1d1d1d;
+  padding: 1rem;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+}
+
+.searchContainer h3 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+}
+
+.searchContainer .searchInput {
+  width: 100%;
+  height: 5%;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #606060;
+  font-size: 1rem;
+  font-weight: 300;
+  letter-spacing: 1.5px;
+  background: transparent;
+  color: #fff;
+  transition: all 0.2s ease-in-out;
+}
+.searchContainer .searchInput:focus {
+  border-bottom: 1.5px solid #fff;
+}
