--- a/css/artist.css
+++ b/css/artist.css
@@ -36,7 +36,7 @@ font-family: 'Poppins', sans-serif; */
 
 .sectionHeading {
   font-family: "Montserrat", sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   margin-bottom: 1rem;
 }
 
@@ -58,12 +58,14 @@ font-family: 'Poppins', sans-serif; */
   font-weight: 300;
   margin-bottom: 2rem;
   font-size: 2rem;
+  letter-spacing: 1px;
 }
 
 .searchContainer .searchInput {
   width: 100%;
   height: 5%;
   outline: none;
+  margin-bottom: 1rem;
   border: none;
   border-bottom: 1px solid #606060;
   font-size: 1rem;
@@ -77,13 +79,47 @@ font-family: 'Poppins', sans-serif; */
   border-bottom: 1.5px solid #fff;
 }
 
+.searchTrackListContainer {
+  background-color: #1d1d1d;
+  padding: 1rem;
+  border-radius: 10px;
+}
+
+.searchTrackListContainer .trackListRow .trackCount .play {
+  left: 23.8%;
+}
+
+.searchBorderBottom {
+  margin-bottom: 1rem;
+}
+
+.noResults {
+  font-weight: 300;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  display: block;
+}
+
+.gridViewContainer .noResults {
+  padding: 0 1rem;
+}
+
+.artistsContainer {
+  background-color: #1d1d1d;
+  padding: 1rem;
+  border-radius: 10px;
+}
 .searchResultRow {
+  padding: 0.4rem 1rem;
+}
+
+.gridViewContainer .sectionHeading {
   padding: 1rem;
 }
 
 .searchResultRow .artistName {
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
-  font-size: 1.1rem;
+  font-size: 1rem;
   margin-bottom: 0.5rem;
 }
