--- a/css/artist.css
+++ b/css/artist.css
@@ -159,3 +159,30 @@ font-family: 'Poppins', sans-serif; */
   padding: 1rem;
   border-radius: 10px;
 }
+
+.optionsMenu {
+  position: fixed;
+  background-color: #282828;
+  border-radius: 3px;
+  border: 1px solid rgba(#000, 0.15);
+  width: 12rem;
+  z-index: 1000;
+}
+
+.item {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0.7rem;
+  color: rgba(147, 147, 147, 0.8);
+  font-size: 1rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.optionsMenu .item:hover {
+  color: #fff;
+  background-color: #333;
+  border-color: #333;
+}
